<resources>
    <string name="app_name">Spendee</string>
    <string name="welcome">Welcome</string>
    <string name="dashboard">Dashboard</string>
    <string name="pin">PIN</string>
    <string name="go">Go</string>
    <string name="total">Total :  </string>

    <string name="add">Add </string>
    <string name="edit">Edit </string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>

    <string name="savingRate">Saving Rate</string>
    <string name="investmentRate">Investment Rate</string>
    <string name="expenseRate">Expense Rate</string>
    <string name="goalRate">Goal Rate</string>

    <string name="income">Income</string>
    <string name="saving">Saving</string>
    <string name="expenses">Expenses</string>
    <string name="investment">Investment</string>
    <string name="goal">Goal</string>
    <string name="report">Report</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="remains"> Remains : 00.00</string>

    <string name="star">*</string>
    <string name="AeTitle">%s %s</string>
    <string name="currency_converter">Converter</string>
    <string name="remind">Remind</string>
    <string name="tool">Tool</string>
    <string name="date_time">Date Time</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>

</resources>