<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.income.IncomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/header_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/incomeAeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/savingRateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_shep"
            android:hint="@string/savingRate"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12.5dp" />

        <EditText
            android:id="@+id/investmentRateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_shep"
            android:hint="@string/investmentRate"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12.5dp" />

        <EditText
            android:id="@+id/expensesRateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_shep"
            android:hint="@string/expenseRate"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12.5dp" />
        <EditText
            android:id="@+id/goalRateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_shep"
            android:hint="@string/goalRate"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="12.5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/incomeSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@drawable/save_button"
            tools:ignore="ButtonStyle" />



    </LinearLayout>

</LinearLayout>