<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/header_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:textSize="23sp"
            android:layout_marginTop="40dp"
            android:text="@string/pin"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">
        <EditText
            android:id="@+id/txt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/pin_text_shep"
            android:hint="@string/star"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/pin_text_shep"
            android:hint="@string/star"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/pin_text_shep"
            android:hint="@string/star"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/pin_text_shep"
            android:hint="@string/star"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/goButton"
            android:text="@string/go"
            android:layout_width="200dp"
            android:background="@drawable/save_button"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>